# wasm-bindgen-console-logger

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
